# wat-db-app

./: .env.example  .gitignore  my-local-sqlite.sqlite3  pseudo-uml.drawio  pyproject.toml  requirements.txt
.github/workflows/: ci-operator.yaml  lint.yaml  test.yaml
src/config/: env.py  urls.py
src/config/django/: base.py  local.py  testing.py
src/custom_users/: admin.py  services.py
src/custom_users/migrations/: 0001_initial.py
src/infrastructures/: errors.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
src/infrastructures/migrations/: 0001_initial.py  0002_reading.py  0003_address_watermeter_address.py  0004_contract_customer_contract_customer.py
src/templates/infrastructures/: water_meter_detail.html  water_meter_edit.html  water_meter_list.html  water_meter_new.html
tests/test_infrastructures/: test_models.py  test_services.py
