[project]
name = "wat-db-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.12.1",
    "django-stubs>=5.2.9",
    "ruff>=0.15.1",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 79

[tool.djlint]
indent = 2
