[project]
name = "wat-db-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "django-stubs>=5.2.9",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 79

[tool.djlint]
indent = 2

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="config.django.testing"
pythonpath = "./src"
testpaths = "./tests"

[tool.ruff.lint.per-file-ignores]
"src/config/django/*" = ["F403"]
